--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Accelerometer Data</h1>
+    <h1>Digital Twin - Accelerometer Data</h1>
 
     <div id="accelerometerData">
         <p>X: <span id="xValue">-</span></p>
@@ -65,7 +65,7 @@
                         position: 'bottom',
                         title: {
                             display: true,
-                            text: 'Accelerometer Position', // Label for X-axis
+                            text: 'Time Interval', // Label for X-axis
                             color: 'black', // Optional: Customize color
                             font: {
                                 size: 14, // Optional: Customize font size
@@ -81,7 +81,7 @@
                         position: 'left',
                         title: {
                             display: true,
-                            text: 'Time Interval', // Label for Y-axis
+                            text: 'Accelerometer Position', // Label for Y-axis
                             color: 'black', // Optional: Customize color
                             font: {
                                 size: 14, // Optional: Customize font size
